backends/drm: switch color management to use gamma 2.2 as its blending space

Existing applications are written for gamma 2.2 blending, so there's no real reason
to insist on linear blending.

BUG: 476868