src/backends/drm/icc_core.frag
@@ -1,6 +1,9 @@
 #version 140
 // SPDX-FileCopyrightText: 2023 Xaver Hugl <xaver.hugl@gmail.com>
 // SPDX-License-Identifier: GPL-2.0-or-later
+
+#include "colormanagement.glsl"
+
 precision highp float;
 precision highp sampler2D;
 precision highp sampler3D;
@@ -10,7 +13,6 @@ in vec2 texcoord0;
 out vec4 fragColor;
 
 uniform sampler2D src;
-uniform float sdrBrightness;
 
 uniform mat4 toXYZD50;
 
@@ -40,6 +42,7 @@ vec3 sample1DLut(in vec3 srcColor, in sampler2D lut, in int lutSize) {
 void main()
 {
     vec4 tex = texture(src, texcoord0);
+    tex = encodingToNits(tex, sourceNamedTransferFunction);
     tex.rgb /= max(tex.a, 0.001);
     tex.rgb /= sdrBrightness;
     tex.rgb = (toXYZD50 * vec4(tex.rgb, 1.0)).rgb;
